--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -12,6 +12,8 @@ networks:
     verify: True
   development:
     verify: False
+  ganache-local:
+    verify: False
 
 wallets:
   from_key: ${PRIVATE_KEY}
